--- a/HTML/ch3/03.html
+++ b/HTML/ch3/03.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <meta charset="utf-8">
+        <title>HTML註釋</title> 
     </head>
+    <body>
+        <h3>靜夜思</h3> <!--練習標籤-->
+        <p>床前明月光</p>
+    </body>
 </html>
