--- a/HTML/ch5/03.html
+++ b/HTML/ch5/03.html
@@ -2,9 +2,14 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title> 
+        <title>定義列表</title> 
     </head>
     <body>
-        
+        <dl>
+            <dt>HTML</dt>
+            <dd>控制網頁結構</dd>
+            <dt>JS</dt>
+            <dd>腳本語言</dd>
+        </dl>
     </body>
 </html>
