--- a/HTML/ch5/04.html
+++ b/HTML/ch5/04.html
@@ -2,9 +2,15 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title> 
+        <title>練習</title> 
     </head>
     <body>
-        
+        <h2>問卷調查</h2>
+        <h3>你是通過什麼途徑?</h3>
+        <ol type="A">
+            <li>FB</li>
+            <li>IG</li>
+
+        </ol>
     </body>
 </html>
