--- a/HTML/ch7/02.html
+++ b/HTML/ch7/02.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title> 
+        <title>相對路徑VS絕對路徑</title> 
     </head>
     <body>
-        
+        <img src="../img/fire.jpg" alt="火" title="火游標顯示">
     </body>
 </html>
