--- a/HTML/ch7/03.html
+++ b/HTML/ch7/03.html
@@ -5,6 +5,8 @@
         <title></title> 
     </head>
     <body>
-        
+        <img src="../img/cloud.jpg" alt="jpg" width="480" height="457">
+        <img src="../img/cloud.png" alt="png" width="480" height="457">
+        <img src="../img/cloud.gif" alt="gif" width="480" height="457" >
     </body>
 </html>
